# decomposer

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  eval.py  prompts.py  prototype.py  pyproject.toml  sampling.py  sql-tasks-formatting.md  utils.py
claw_eval_initial_experiments/: README.md  config_decomposer.yaml  config_vllm.yaml  pyproject.toml  requirements.txt
claw_eval_initial_experiments/research/: agentic_subagent_delegation_comparison.md  claw_eval_decomposer_experiment.md  decomposer_experiment_journal.md  decomposer_manager_executor_examples.md  latest_decomposer_results_slides.md
claw_eval_initial_experiments/tests/: test_decomposer.py  test_decomposer_prompts.py  test_flat_runner.py  test_grade_batch.py  test_null_judge.py  test_openai_compat.py  test_react_loop.py  test_task_selection.py  test_vllm_config.py  test_vllm_process.py  test_vllm_readiness.py
decomposer/: core.py
examples/minimal/: README.md  langgraph.json  messages.md  render_messages.py  run.py  subagents.py
jobs/minimax_m3_decomposer_qwen36_subagent_local_smoke/: result.json
jobs/minimax_m3_decomposer_qwen36_subagents_tb20_llm_scheduler/: config.json  lock.json  result.json
jobs/minimax_m3_decomposer_qwen36_subagents_tb20_llm_scheduler_32k/: config.json  lock.json  result.json
jobs/minimax_m3_decomposer_qwen36_subagents_tb20_llm_scheduler_probe/: config.json  lock.json  result.json
jobs/minimax_m3_decomposer_qwen36_subagents_tb20_llm_scheduler_reasoning8k/: config.json  lock.json  result.json
jobs/minimax_m3_decomposer_qwen36_subagents_tb20_llm_scheduler_reasoning8k_mt12288/: config.json  lock.json  result.json
jobs/qwen36_27b_baseline_tb20_chess_best_move_smoke/: config.json  lock.json  (+1 more)
scripts/: download_models.sh  download_musique.py  vllm_serve_gemma_4_26b_a4b.sh  vllm_serve_gemma_4_e2b.sh  vllm_serve_gemma_4_e4b.sh  vllm_serve_lfm2_5_1_2b_instruct.sh  vllm_serve_lfm2_5_1_2b_thinking.sh  vllm_serve_lfm2_5_8b_a1b.sh  vllm_serve_qwen36_27b.sh  vllm_serve_qwen3_5_2b.sh  vllm_serve_qwen3_5_4b.sh  vllm_serve_qwen3_6_27b.sh  vllm_serve_qwen3_6_35b_a3b_fp8.sh
symtrace/: __init__.py  abstraction.py  cli.py  dataset.py  episode_runner.py  index_repo.py  openrouter_task_client.py  pattern_labels.py  reporting.py  runtime_profiler.py  serializers.py
tests/: test_abstraction.py  test_answer_extraction.py  test_benchmark.py  test_dataset.py  test_eval_filters.py  test_export.py  test_func_body_pipeline.py  test_indexing.py  test_openrouter_messages.py  test_package.py  test_runtime.py  test_sampling.py
(+278 files in other folders)
