[project]
name = "decomposer"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "soundfile>=0.14.0",
    "torch==2.10.0",
    "transformers>=5.2.0",
    "vllm==0.19.1",
    "langgraph>=1.2.4",
    "langchain>=1.3.6",
    "deepagents>=0.6.10",
    "langgraph-cli[inmem]>=0.4.30",
    "langchain-openai>=1.3.3",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
override-dependencies = [
    "opencv-python-headless<4.13",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
