[project]
name = "decomposer"
version = "0.1.0"
description = "An agent that solves tasks by decomposing them and delegating subtasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.6,<2",
    "langchain-core>=1.4.0,<2",
    "langgraph>=1.2.4,<2",
    "langgraph-sdk>=0.4.0,<0.5",
    "pydantic>=2.11,<3",
    "typing-extensions>=4.12,<5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "ruff>=0.12,<1",
]
