[project]
name = "decomposer"
version = "0.1.0"
description = "An agent that solves tasks by decomposing them and delegating subtasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.6,<2",
    "langchain-core>=1.4.0,<2",
    "langgraph>=1.2.4,<2",
    "langgraph-sdk>=0.4.0,<0.5",
    "pydantic>=2.11,<3",
    "typing-extensions>=4.12,<5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchaudio = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }
vllm = { url = "https://github.com/vllm-project/vllm/releases/download/v0.24.0/vllm-0.24.0%2Bcu129-cp38-abi3-manylinux_2_28_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9,<10",
]
models = [
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "torchvision==0.26.0",
    "vllm==0.24.0",
]
